left column design, desktop background corrected

--- a/index.html
+++ b/index.html
@@ -18,20 +18,19 @@
 
 <body>
 
-
   <main>
 
 
     <div class="left">
-      <img src="#" alt="hello">
+      <img class="logo"; src="images/logo.svg" alt="logo">
       <a href="#">
-        <img src="images/icon-document.svg" alt="">
+        <img src="images/icon-document.svg" alt="doc icon">
       </a>
       <a href="#">
-        <img src="images/icon-folder.svg" alt="">
+        <img src="images/icon-folder.svg" alt="folder icon">
       </a>
       <a href="#">
-        <img src="images/icon-upload.svg" alt="">
+        <img src="images/icon-upload.svg" alt="upload icon">
       </a>
     </div>
 
@@ -43,6 +42,10 @@
       0 GB
       1000 GB
     </div>
+
+    <footer>
+
+    </footer>
 
   </main>
 
